@@ -10,6 +10,8 @@ Revision 0.3.0, released XX-11-2019
 - Add RFC4387 providing Certificate Store Access via HTTP
 - Changed assertion in unit tests from Python built-in to `unittest`
   provided
+- Add RFC8692 providing Algorithm Identifiers for RSASSA-PSS and
+  ECDSA Using SHAKEs
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
